~~~~~~~~~~~~~~~~
3.5.1
~~~~~~~~~~~~~~~~

* more evasion *yawn*
* added amsi bypass to get around completely, adds amsi flag to command line. If you are using this then the 2191 cmd prompt limit will be larger

~~~~~~~~~~~~~~~~
version 3.5
~~~~~~~~~~~~~~~~

* add randomized URILength - YOLO Justin Elze
* removed sleep function for preferred -NoExit
* add more evasion

~~~~~~~~~~~~~~~~
version 3.4.5
~~~~~~~~~~~~~~~~

* move to while($true) instead of for loop
* fix byte splitting for match on regular expression
* slim down code (woot)
* add better handling of liquify bytes

~~~~~~~~~~~~~~~~
version 3.4.4
~~~~~~~~~~~~~~~~

* remove byte designation - not needed already in byte format

~~~~~~~~~~~~~~~~
version 3.4.3
~~~~~~~~~~~~~~~~

* fix when liquify bytes called would not reroll variable names which could cause conflicts

~~~~~~~~~~~~~~~~
version 3.4.2
~~~~~~~~~~~~~~~~

* remove -e''c as this breaks windows 7 compatibility, now works on win7

~~~~~~~~~~~~~~~~
version 3.4.1
~~~~~~~~~~~~~~~~

* remove byte specification, not needed and shortens code base
* fix cobalt strike hta and macro generation wording

~~~~~~~~~~~~~~~~
version 3.4
~~~~~~~~~~~~~~~~

* fix opening payload with file error by using open instead (thanks jmhickman for PR)
* fix macro injection technique that was not spawning a child process window which would cause powershell to fail
* fix 32 bit compatibility
* add better randomization variable name check conflicts (.lower())
* fix hta attack vector
* add a payload check for custom shellcode and cobalt strike to ensure its formatted properly

~~~~~~~~~~~~~~~~
version 3.3.2
~~~~~~~~~~~~~~~~

* add double () for defender signature update

~~~~~~~~~~~~~~~~
version 3.3.1
~~~~~~~~~~~~~~~~

* fix bugs where vars would be overwritten
* readd exception handling

~~~~~~~~~~~~~~~~
version 3.3
~~~~~~~~~~~~~~~~

* added back 32 bit compatibility
* added better evasion through kernel32.dll
* shaved shellcode size